--- a/samsmodule/src/main/res/layout/activity_main.xml
+++ b/samsmodule/src/main/res/layout/activity_main.xml
@@ -7,21 +7,11 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Welcome to sams app"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:textSize="30dp"/>
-
-    </ScrollView>
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
