--- a/ericsmodule/src/main/res/layout/activity_main.xml
+++ b/ericsmodule/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:textSize="25dp"/>
+            android:textSize="25dp"
+            android:id="@+id/myTextView"/>
 
 </android.support.constraint.ConstraintLayout>
