--- a/ericsmodule/src/main/res/layout/activity_main.xml
+++ b/ericsmodule/src/main/res/layout/activity_main.xml
@@ -7,10 +7,38 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-<android.support.v7.widget.RecyclerView
+    <TextView
+        android:id="@+id/beerPercentageLabelTextView"
+        android:text="Average Beer Percentage(ABV):"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/averageBeerPercentageTextView"
+        android:textSize="20dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toEndOf="@+id/beerPercentageLabelTextView"
+        android:layout_marginStart="8dp"/>
+
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/averageBeerPercentageTextView"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp">
 
 </android.support.v7.widget.RecyclerView>
 
